# mail-ingest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
mail_ingest/: __init__.py  client.py
src/mail_ingest/: attachments.py
tests/: test_attachments.py  test_client.py
