[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-ingest"
version = "0.1.0"
description = "Fetch messages and save PDF attachments from an IMAP mailbox."
readme = "README.md"
authors = [{ name = "José Morell" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "imap-tools",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["mail_ingest*"]
